fix:align nav in midia

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -304,9 +304,9 @@ section{
 
   header{
     display: flex;
+    width: 700px;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     border: 1px solid white;
   }
 
@@ -314,13 +314,11 @@ section{
     border: 1px solid white;
   }
 
-  .content-nav{ 
-  justify-content: center;
-  align-items: center;
-  margin-left: 70px;
+  .content-nav{
   gap: 15px;
   border: 1px solid white;
-} 
+  margin-left: -10px;
+}
 
   main{
   display: flex;
@@ -405,5 +403,8 @@ section{
 .align-all > p{
   width: 400px;
   margin-left: -155px;
+}
+.align-hard > h1{
+  font-size: 67px;
 }
 }
